# MindPulse-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  agentapi.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/agents/: note_summarizer.py  study_insight_agent.py  task_analyzer.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  notes.py  study_insight.py  tasks.py
app/core/: config.py  ollama_client.py
app/utils/: note_parser.py  study_insight_parser.py  task_parser.py
docs/: CONTRIBUTING.md
scripts/: lint.sh  run_tests.sh  setup.sh  test_all_endpoints.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_note_parser.py  test_note_summarizer.py  test_ollama_client.py  test_study_insight_agent.py  test_study_insight_parser.py  test_task_analyzer.py  test_task_parser.py
